<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="#CCCDC6"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/result_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity="bottom|end"
        android:height="250dp"
        android:background="#E8E9EB"
        android:padding="10dp"
        android:textSize="48sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_7"
            android:textColor="#746D69"
            android:text="@string/_7"
            android:backgroundTint="#ACADA8"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_8"
            android:textColor="#746D69"
            android:text="@string/_8"
            android:backgroundTint="#ACADA8"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_9"
            android:textColor="#746D69"
            android:text="@string/_9"
            android:backgroundTint="#ACADA8"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_divide"
            android:textColor="#746D69"
            android:text="@string/divide2"
            android:backgroundTint="#ACADA8"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:textColor="#746D69"
            android:text="@string/_4"
            android:backgroundTint="#ACADA8"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:textColor="#746D69"
            android:text="@string/_5"
            android:backgroundTint="#ACADA8"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:textColor="#746D69"
            android:text="@string/_6"
            android:backgroundTint="#ACADA8"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:textColor="#746D69"
            android:text="@string/multiply"
            android:backgroundTint="#ACADA8"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:textColor="#746D69"
            android:text="@string/_1"
            android:backgroundTint="#ACADA8"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:textColor="#746D69"
            android:text="@string/_2"
            android:backgroundTint="#ACADA8"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:textColor="#746D69"
            android:text="@string/_3"
            android:backgroundTint="#ACADA8"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:textColor="#746D69"
            android:text="@string/subtract"
            android:backgroundTint="#ACADA8"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:textColor="#746D69"
            android:text="@string/decimal"
            android:backgroundTint="#ACADA8"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onDecimal"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:textColor="#746D69"
            android:text="@string/_0"
            android:backgroundTint="#ACADA8"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:textColor="#746D69"
            android:text="@string/clear"
            android:backgroundTint="#ACADA8"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onClear"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:textColor="#746D69"
            android:text="@string/add"
            android:backgroundTint="#ACADA8"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:textColor="#746D69"
            android:text="@string/equals"
            android:backgroundTint="#ACADA8"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onEqual"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>